# ros2_intro

./: README.md
1_intro/: 1_ros2_intro.odp  README.md
1_intro/soluce/my_first_cpp_package/: CMakeLists.txt  package.xml
1_intro/soluce/my_first_cpp_package/include/my_first_cpp_package/: my_first_publisher.h  my_first_service_client.h  my_first_service_server.h  my_first_subscriber.h
1_intro/soluce/my_first_cpp_package/src/: my_first_publisher.cpp  my_first_service_client.cpp  my_first_service_server.cpp  my_first_subscriber.cpp
1_intro/soluce/my_first_msgs/: CMakeLists.txt  package.xml
1_intro/soluce/my_first_msgs/msg/: ComputerID.msg
1_intro/soluce/my_first_msgs/srv/: ComputerIDCheck.srv
3_manip/: 3_ros2_manip.odp  README.md
3_manip/soluce/my_first_robot/launch/: robot_ctrl.launch.py
3_manip/soluce/my_first_robot/urdf/: my_first_robot.urdf
